--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,92 @@
-.DS_Store
-node_modules
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+# Logs
 logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Editor directories and files
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Optional npm cache directory
+.npm
 
-# Lock files
-yarn.lock
-pnpm-lock.yaml
-package-lock.json
+# Dependency directories
+node_modules
+/jspm_packages
+/bower_components
 
-# Yarn v2
-.pnp.*
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
+# Yarn Integrity file
+.yarn-integrity
 
-# vat
-public/video
-*.zip
-*.7z
+# Optional eslint cache
+.eslintcache
+
+# dotenv environment variables file(s)
+.env
+.env.*
+
+#Build generated
+dist/
+build/
+
+# Serverless generated files
+.serverless/
+
+### SublimeText ###
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+# *.sublime-project
+
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### Vim ###
+*.sw[a-p]
+
+### WebStorm/IntelliJ ###
+/.idea
+modules.xml
+*.ipr
+
+
+### System Files ###
+*.DS_Store
+
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+coverage
+lib
+gitmojis.json
+/lerna-debug.log
+tmp
