--- a/packages/cc-git-tag/package.json
+++ b/packages/cc-git-tag/package.json
@@ -7,12 +7,11 @@
     "cc-git-tag": "bin/index.js"
   },
   "gitHead": "54dd444208256daa50a816bb9ee9963228101866",
-  "devDependencies": {
+  "dependencies": {
     "bump-regex": "^4.1.0",
     "chalk": "^4.1.2",
     "dayjs": "^1.10.6",
     "inquirer": "^8.1.2",
     "simple-git": "^2.45.0"
-  },
-  "dependencies": {}
+  }
 }
