--- a/packages/cc-git-tag/package.json
+++ b/packages/cc-git-tag/package.json
@@ -12,6 +12,8 @@
     "chalk": "^4.1.2",
     "dayjs": "^1.10.6",
     "inquirer": "^8.1.2",
-    "simple-git": "^2.45.0"
+    "simple-git": "^2.45.0",
+    "child_process": "^1.0.2",
+    "iconv-lite": "^0.6.3"
   }
 }
