--- a/packages/cc-git-tag/package.json
+++ b/packages/cc-git-tag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cc-git-tag",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license": "MIT",
   "author": "ChenJunHong <1054535289@qq.com>",
   "bin": {
@@ -10,10 +10,10 @@
   "dependencies": {
     "bump-regex": "^4.1.0",
     "chalk": "^4.1.2",
-    "dayjs": "^1.10.6",
-    "inquirer": "^8.1.2",
-    "simple-git": "^2.45.0",
     "child_process": "^1.0.2",
-    "iconv-lite": "^0.6.3"
+    "dayjs": "^1.10.6",
+    "iconv-lite": "^0.6.3",
+    "inquirer": "^8.1.2",
+    "simple-git": "^2.45.0"
   }
 }
