--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "packages/*"
   ],
   "scripts": {
+    "lerna:all": "run-p switch:npm lerna:publish switch:taobao",
     "lerna:publish": "lerna publish",
     "switch:taobao": "yarn config set registry https://registry.npmmirror.com/",
     "switch:npm": "yarn config set registry https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
