--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lerna:all": "run-p switch:npm lerna:publish",
     "lerna:publish": "lerna publish",
     "switch:taobao": "yarn config set registry https://registry.npmmirror.com/",
-    "switch:npm": "yarn config set registry https://registry.npmjs.org/"
+    "switch:npm": " npm config set registry https://registry.npmjs.org/"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5"
