--- a/packages/git-pro/package.json
+++ b/packages/git-pro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cjh/git-pro",
   "version": "1.0.3",
-  "description": "Git workflow enhancement tool,前端团队git工具!",
+  "description": "Git workflow enhancement tool,前端团队git工具!!!",
   "main": "dist/index.js",
   "bin": {
     "git-pro": "./dist/index.js"
