--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "lerna:all": "run-p switch:npm lerna:publish",
     "lerna:publish": "lerna publish",
-    "switch:taobao": "yarn config set registry https://registry.npmmirror.com/",
+    "switch:taobao": "npm config set registry https://registry.npmmirror.com/",
     "switch:npm": " npm config set registry https://registry.npmjs.org/"
   },
   "dependencies": {
