--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   ],
   "scripts": {
     "lerna:all": "run-p switch:npm lerna:publish",
-    "lerna:publish": "lerna publish",
+    "lerna:publish": "lerna publish ",
     "switch:taobao": "npm config set registry https://registry.npmmirror.com/",
     "switch:npm": " npm config set registry https://registry.npmjs.org/"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
