--- a/packages/git-pro/package.json
+++ b/packages/git-pro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cjh0/git-pro",
   "version": "1.1.3",
-  "description": "Git workflow enhancement tool,前端团队git工具!!!!",
+  "description": "Git workflow enhancement tool,前端团队git工具!!",
   "main": "dist/index.js",
   "bin": {
     "git-pro": "./dist/index.js"
@@ -35,5 +35,5 @@
     "javascript-obfuscator": "^4.1.1",
     "typescript": "^5.1.6"
   },
-  "gitHead": "657b50b5ef1f6a586257cdedba915cfff3034415"
+  "gitHead": "ceb8347fc0638eced8682211a0b2edcff3a71dca"
 }
